--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <footer>
       <div class="footer-elements">
       <div class="footer-items">
-        <p>Inna Shekina</p>
+        <p>Inna Shchokina</p>
         <p><a href="#">inna@example.com</a></p>
       </div>
     </div>
